--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@types/jest": "^23.3.11",
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
     "typescript": "^3.2.2"
